--- a/haper website/index.html
+++ b/haper website/index.html
@@ -12,7 +12,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body{overflow: hidden; }>
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
@@ -71,6 +71,6 @@
         <p class="footer-txt">Made with ♥ by Harper</p>
     </div>
     <script src="script.js"></script>
-</body>
+    </body>
 
 </html>
