--- a/haper website/projects.html
+++ b/haper website/projects.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body{overflow: hidden; }>
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
@@ -69,6 +69,6 @@
         <h1 class="proj-txt">My Projects</h1>
         <p class="proj-txt-2"><b>Soon™</b></p>
     </div>
-</body>
+    </body>
 
 </html>
