--- a/haper website/about.html
+++ b/haper website/about.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
-<body>
+<body{overflow: hidden; }>
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
@@ -77,6 +77,6 @@
         <p class="soooontm">Soon™</p>
     </div>
 
-</body>
+    </body>
 
 </html>
